--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,25 @@
+commit 9244a055d21432cca2ecf264b17c675c55c5ee88
+Author: J. R. Okajima <hooanon05@yahoo.co.jp>
+Date:   Thu Dec 24 14:38:21 2009 +0900
+
+    aufs: support security_file_mmap()
+    
+    Call security_file_mmap() from aufs_mmap().
+    - new helper functions au_arch_prot_conv(), au_prot_conv() and
+      au_flag_conv().
+    
+    Signed-off-by: J. R. Okajima <hooanon05@yahoo.co.jp>
+
+commit 935d346824fbd7fd072b16456e5a886175e374ef
+Author: J. R. Okajima <hooanon05@yahoo.co.jp>
+Date:   Thu Dec 24 14:37:00 2009 +0900
+
+    aufs stdalone: support security_file_mmap()
+    
+    Export security_file_mmap() for aufs.
+    
+    Signed-off-by: J. R. Okajima <hooanon05@yahoo.co.jp>
+
 commit 3a4bbfd5b06f65def492a1c97b57dbce517bbf95
 Author: J. R. Okajima <hooanon05@yahoo.co.jp>
 Date:   Wed Dec 23 00:49:56 2009 +0900
