aufs2 standalone version for linux-2.6.
These files are generated from another GIT tree and its log messages are
stored in ChageLog file in this tree/directory.

Signed-off-by: J. R. Okajima <hooanon05@yahoo.co.jp>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,10 +1,11 @@
-commit ef650e8c834585f7c95c54c7120f1309701dec0f
+commit 5f80ac5970a39e18c00db69889ef641aef9e4f48
 Author: J. R. Okajima <hooanon05@yahoo.co.jp>
-Date:   Sat Jan 2 13:20:55 2010 +0900
+Date:   Sat Jan 2 16:32:31 2010 +0900
 
-    aufs: remove vfsub_dentry_open(), follow the changes for IMA
+    aufs: tiny, new abstract function vfsub_dentry_open()
     
-    See the commit, a528172 "aufs: follow the changes for IMA"
+    The main purpose of this small wrapper is to minimize the confilict at
+    merging GIT branches in the future.
     
     Signed-off-by: J. R. Okajima <hooanon05@yahoo.co.jp>
 
