--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+commit 4a46d05d5cf4b04b401a3f86a5a2bb3611a7c9aa
+Author: J. R. Okajima <hooanon05@yahoo.co.jp>
+Date:   Sun Jan 3 02:15:28 2010 +0900
+
+    aufs: tiny, add a forgotten configuration
+    
+    Signed-off-by: J. R. Okajima <hooanon05@yahoo.co.jp>
+
 commit b9efefdfb1f21164029122b7b6148033d7cadad2
 Author: J. R. Okajima <hooanon05@yahoo.co.jp>
 Date:   Sun Jan 3 00:44:19 2010 +0900
